# selenoid_workshop

./: .gitignore  LICENSE  README.md  browsers.json  conftest.py  pyproject.toml  tox.ini
config/: config.py  env.py  test_run.py
grid-router/: users.htpasswd
grid-router/quota/: test.xml
src/: driver.py
tests/: test_base.py
