[tool.poetry]
name = "selenoid_workshop"
version = "0.1.0"
description = "Selenoid workshop: Pytest + Selene + Selenoid + Allure"
authors = ["Igor Balagurov <balagurovi@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
